# tum-e18-work

amplitudes/: amplitude.py  angular_dependencies.py  breit_wigner.py  constants.py  plotting_scripts.py
analyses/: DalitzPlot.py  amplitude_bins.py  coefficients_check.py  collect_data.py  dalitz_plot.py  perform_fit.py
binnedFitter_2000/: bins.py  chi2model.py  utils.py
bins/: bins.py  bins_main.py  chi2model.py  iterative_binning.py  spline_binning.py  utils.py
data/: metadata.py  order_data.py
ppppppppp/: #sandbox.cxx#  .#sandbox.cxx  .gitignore  BELLE_efficiency.cc  BELLE_efficiency.h  CMakeLists.txt  Dnine.h  FindNlopt.cmake  ROOT_fit_wrapper.cc  ROOT_fit_wrapper.h  amplitude.cc  amplitude.h  analyzeBELLE_version2.py  analyze_MC_CP.py  angularDependence.cc  angularDependence.h  branchFileEnding.h  check_strange_solution.py  constants.h  efficiencyFunction.cc  efficiencyFunction.h  fft.h  freeDdecayBinnings.py  generator.cc  generator.h  getBELLEdata.cc  getBELLEdata.h  getBranchFileEnding.py  getMasterDirectory.py  integralAnalysis.py  integrator.cc  integrator.h  kinematicSignature.cc  kinematicSignature.h  loadConstants.py  logLikelihood.cc  logLikelihood.h  makeDalitzPlot.py  massShape.cc  massShape.h  (+21 more)
ppppppppp/tests/: test_breit_wigner.py
references/: ID_integralFile  ac_integralFile  logOutput.txt  outROOT.root
